# standard-penumbra-explorer

./: .gitignore  Cargo.toml  LICENSE.txt
src/: error.rs  indexer.rs  main.rs  pagination.rs  sql.rs  state.rs
src/component/: block.rs  block.sql  dex.rs  mod.rs  validator.rs
src/indexer/: mod.rs
src/web/: block.rs  blocks.rs  common.rs  example.rs  index.rs  mod.rs  static_files.rs  validators.rs
static/: index.css
templates/: blocks.html  validator.html  validators.html
