[package]
name = "standard-penumbra-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
