[package]
authors = ["Penumbra Labs <team@penumbra.zone>"]
name = "standard-penumbra-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.5", features = ["json"] }
include_dir = { version = "0.7" }
minijinja = { version = "2.0" }
pindexer = { git = "https://github.com/penumbra-zone/penumbra", branch = "pindexer-tweaks" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

